src/scss/global.scss
body {
  font-family: sans-serif;
  background-color: #2d333b;
}

#root {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.slider-day {
  margin: 20px 0;
  .slick-track {
    padding: 70px 0;
  }
  div > .slick-slide {
    width: 400px;
    transition: all 0.4s;
    > div {
      height: 460px;
      margin: 0 20px;
    }
  }
  .slick-list {
    margin: 0 -20px;
  }
  .slick-center {
    transition: all 0.5s;
    transform: scale(1.3);
    > div {
      box-shadow: 0px 0px 40px #2d333b;
    }
  }
}

.week-dots {
  position: absolute;
  bottom: 9%;
  display: flex;
}

